fix 删除管理脚本中的 -XX:+AggressiveOpts 参数  #I6PUNM